[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.*"
geo-types = { version = "0.7.*" }
geozero = { version = "0.11.*", features = [
    "with-postgis-sqlx",
    "with-wkb",
    "with-geojson",
] }
sqlx = { version = "0.7.*", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
] }
