[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
encoding_rs = "0.8.33"
geo-types = { version = "0.7.*" }
time = { version = "0.3.*", features = [
    "macros",
    "local-offset",
    "parsing",
    "formatting",
] }
uuid = { version = "1.5.*", features = ["v4"] }
