[package]
name = "taod-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.*"
clap = { version = "4.4.*", features = ["derive"] }
csv = { version = "1.3.*" }
db = { path = "../db" }
dotenvy = "0.15.7"
encoding_rs = "0.8.33"
geo-types = { version = "0.7.*" }
geojson = { version = "0.24.*", features = ["geo-types"] }
geometries = { path = "../geometries" }
geozero = { version = "0.11.*", features = [
    "with-postgis-sqlx",
    "with-wkb",
    "with-geojson",
] }
sqlx = { version = "0.7.*", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
] }
time = { version = "0.3.*", features = [
    "macros",
    "local-offset",
    "parsing",
    "formatting",
] }
tokio = { version = "1.33.*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
uuid = { version = "1.5.*", features = ["v4"] }
