[package]
name = "taod-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4.*", features = ["macros"] }
anyhow = "1.0.*"
config = "0.13.*"
db = { path = "../db" }
dotenvy = "0.15.7"
geo-types = { version = "0.7.*" }
geojson = { version = "0.24.*", features = ["geo-types"] }
geometries = { path = "../geometries" }
geozero = { version = "0.11.*", features = [
    "with-postgis-sqlx",
    "with-wkb",
    "with-geojson",
] }
sqlx = { version = "0.7.*", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
time = { version = "0.3.*", features = [
    "macros",
    "local-offset",
    "parsing",
    "formatting",
    "serde",
] }
tokio = { version = "1.33.*", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.5.*", features = ["v4", "serde"] }
